src/snapshots/afrotd__parser__tests__interpreation_html_1.4.8_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 1.4.8.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Nachdem der Ball nach einem Scrimmage Down dead wurde, erkennt der
            Umpire, dass Linebacker B55 einen unverdeckten Rückenschützer in
            Höhe der Taille trägt, welcher augenscheinlich während des Downs
            entblößt wurde.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                B55 muss das Feld nicht zwangsläufig für einen Down verlassen,
                aber der unbedeckte Schutz muss vor dem nächsten Down bedeckt
                werden.
            </p>
        </details>
    </div>
</article>
