src/snapshots/afrotd__parser__tests__interpreation_html_10.1.4_7.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.1.4.VII
        </p>
    </div>
    <div class="message-body">
        <p>
            A1 empfängt den Snap, während er auf der Endlinie steht. Team B ist
            Offside.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Foul (im Aus beim Snap) hebt Team B’s Offside auf und
                der Down wird wiederholt (Beachte: Wenn Team B nicht Offside
                gewesen wäre, hätte Team B die Strafe wegen Team A’s Foul oder
                einen Safety wählen können) (Regel 8.5.1.a).
            </p>
        </details>
    </div>
</article>
