src/snapshots/afrotd__parser__tests__interpreation_html_10.1.5_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 10.1.5.III
        </p>
    </div>
    <div class="message-body">
        <p>
            2. und Goal von der B-3. Ballträger A14 wird an der B-1 zu Boden
            gebracht und danach springt B67 nach. A14 revanchiert sich, indem
            er B67 schlägt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Die Strafen gleichen sich aus, da noch keine vervollständigt
                wurde. A14 wird wegen der Schlägerei disqualifiziert. 3. und
                Goal (Regel 10.1.1).
            </p>
        </details>
    </div>
</article>
